--- a/core/build.gradle
+++ b/core/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compileOnly 'commons-lang:commons-lang:2.6'
     compileOnly 'com.github.oshi:oshi-core:5.8.5'
     compileOnly 'org.lz4:lz4-java:1.8.0'
+    compileOnly 'it.unimi.dsi:fastutil:8.5.13'
 
     // Third Party Integrations
     compileOnly 'com.ticxo.playeranimator:PlayerAnimator:R1.2.7'
