--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -19,6 +19,7 @@ libraries:
   - rhino:js:1.7R2
   - bsf:bsf:2.4.0
   - org.lz4:lz4-java:1.8.0
+  - it.unimi.dsi:fastutil:8.5.13
 commands:
   iris:
     aliases: [ ir, irs ]
