--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ registerCustomOutputTaskUnix('PsychoLT', '/Volumes/PRO-G40/Minecraft/MinecraftDe
 // ==============================================================
 
 def NMS_BINDINGS = Map.of(
+        "v1_21_R1", "1.21-R0.1-SNAPSHOT",
         "v1_20_R4", "1.20.6-R0.1-SNAPSHOT",
         "v1_20_R3", "1.20.4-R0.1-SNAPSHOT",
         "v1_20_R2", "1.20.2-R0.1-SNAPSHOT",
@@ -51,6 +52,7 @@ def NMS_BINDINGS = Map.of(
         "v1_19_R1", "1.19.2-R0.1-SNAPSHOT"
 )
 def JVM_VERSION = Map.of(
+        "v1_21_R1", 21,
         "v1_20_R4", 21,
 )
 NMS_BINDINGS.each {
